--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div id="gif-container">
-            <img id="main-gif" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHp0eXoxbmZ4ZzB6eXp6eXp6eXp6eXp6eXp6eXp6eXp6eXp6JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/c76IJLufpN96/giphy.gif" alt="Cute bear">
+            <img id="main-gif" src="imageedit_2_4358145923.gif" alt="Cute bear">
         </div>
         <h1 id="question">Veux-tu être ma Valentine ? ❤️</h1>
         <div class="buttons">
