--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div id="gif-container">
-            <img id="main-gif" src="imageedit_2_4358145923.gif" alt="Cute bear">
+            <img id="main-gif" src="imageedit_2_4358145923.gif" alt="Ma photo personnalisée">
         </div>
         <h1 id="question">Veux-tu être ma Valentine ? ❤️</h1>
         <div class="buttons">
