--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <div id="gif-container">
             <img id="main-gif" src="imageedit_2_4358145923.gif" alt="Ma photo personnalisée">
         </div>
-        <h1 id="question">Veux-tu être ma Valentine ? ❤️</h1>
+        <h1 id="question">3aslaa! Wanna be my Valentine ? ❤️</h1>
         <div class="buttons">
-            <button id="btn-oui">OUI !</button>
-            <button id="btn-non">Non...</button>
+            <button id="btn-oui">Yess !</button>
+            <button id="btn-non">Noo...</button>
         </div>
     </div>
     <script src="script.js"></script>
